# Velo-de

./: Cargo.toml  Makefile  README.md  config.kdl  install.sh  uninstall.sh
assets/: velo-de.desktop
crates/velo-de/: Cargo.toml
crates/velo-de-config/: Cargo.toml
crates/velo-de-config/src/: config.rs  keybind.rs  lib.rs  theme.rs
crates/velo-de-core/: Cargo.toml
crates/velo-de-core/src/: anim.rs  geometry.rs  layout.rs  lib.rs  model.rs
crates/velo-de-ipc/: Cargo.toml
crates/velo-de-ipc/src/: client.rs  hypr_compat.rs  lib.rs  paths.rs  protocol.rs
crates/velo-de/src/: cursor.rs  ipc.rs  main.rs  render.rs  state.rs
crates/velo-de/src/backend/: input.rs  mod.rs  udev.rs  winit.rs
crates/velo-de/src/shell/: layer.rs  mod.rs
crates/velo-hyprctl/: Cargo.toml
crates/velo-hyprctl/src/: main.rs
crates/velo-msg/: Cargo.toml
crates/velo-msg/src/: main.rs
