[workspace]
resolver = "2"
members = [
    "crates/velo-de-core",
    "crates/velo-de-config",
    "crates/velo-de-ipc",
    "crates/velo-msg",
    "crates/velo-hyprctl",
    "crates/velo-de",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Velo"]

[profile.release]
lto = "thin"
